fix disappearing progress bar on mobile

--- a/src/components/viewWorkout/RestPage.scss
+++ b/src/components/viewWorkout/RestPage.scss
@@ -6,7 +6,7 @@
 }
 
 .container-rest{
-    height: 100%;
+    height: 90%;
     margin: auto;
     display: flex;
     flex-direction: column;
