--- a/src/components/viewWorkout/YouTubePage.scss
+++ b/src/components/viewWorkout/YouTubePage.scss
@@ -6,7 +6,7 @@
 }
 
 .container-settings{
-    height: 100%;
+    height: 90%;
     margin: auto;
     display: flex;
     flex-direction: column;
